--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,1 +1,5 @@
-@import "https://cdn.jsdelivr.net/npm/beercss@3.6.5/dist/cdn/beer.min.css";
+@import "https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css";
+
+:root {
+    --bulma-body-overflow-y: auto;
+}
